tests/snapshots/cli__render_unknown_engine_errors.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - render
    - 01ARZ3NDEKTSV4RRFFQ69G5FAV
    - "--engine"
    - no-such-engine
    - "-n"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: while selecting the render engine: unknown engine `no-such-engine` for format `pdf`
