tests/snapshots/cli__render_unknown_format_errors.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - render
    - 01ARZ3NDEKTSV4RRFFQ69G5FAV
    - "--to"
    - docx
    - "-n"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: while selecting the render engine: unknown output format `docx`
