tests/snapshots/cli__render_warnings_lenient.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - render
    - 01ARZ3NDEKTSV4RRFFQ69G5FAV
    - "-p"
    - "-n"
  env:
    EDITOR: "true"
    PATH: stub-bin
---
success: true
exit_code: 0
----- stdout -----
good.pdf

----- stderr -----
warning: skipped `[ULID....................]-bad.md`: the frontmatter has no `title` field
