tests/snapshots/cli__search_aligns_varied_width_titles.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - search
    - "-n"
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
ID                          DATE        TITLE                     TAGS       PATH
[ULID]  [DATE]  日本語                    lang/jp    [VAULT]/all-notes/[ULID]-wide.md
[ULID]  [DATE]  A Much Longer Note Title  area/work  [VAULT]/all-notes/[ULID]-long.md
[ULID]  [DATE]  Mid Title                 area/home  [VAULT]/all-notes/[ULID]-mid.md

----- stderr -----
