tests/snapshots/cli__search_empty_vault_exits_nonzero.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - search
    - "-n"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
No notes matched your search criteria.
