tests/snapshots/cli__search_filters_by_tag.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - search
    - "tag:area/work"
    - "-n"
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
ID	DATE	TITLE	TAGS	PATH
[ULID]	[DATE]	Work Note	area/work	[VAULT]/all-notes/[ULID]-work.md

----- stderr -----
