tests/snapshots/cli__search_full_text.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - search
    - "text:deadline"
    - "-n"
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
ID                          DATE        TITLE  TAGS  PATH
[ULID]  [DATE]  A            [VAULT]/all-notes/[ULID]-a.md

----- stderr -----
