tests/snapshots/cli__search_lists_all_notes_newest_first.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - search
    - "-n"
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
ID                          DATE        TITLE  TAGS  PATH
[ULID....................]  [DATE....]  Newer        [VAULT]/all-notes/[ULID....................]-newer.md
[ULID....................]  [DATE....]  Older        [VAULT]/all-notes/[ULID....................]-older.md

----- stderr -----
